tests/lean/errmsg1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
λ x : ?M::0, x
λ x : ?M::0, x
Error (line: 4, pos: 10) invalid expression, it still contains metavariables after elaboration, metavariable: ?M::0, type:
(Type U)
Error (line: 6, pos: 3) failed to synthesize metavar, its type is not a proposition, metavariable: ?M::0, type:
A : Type, x : A ⊢ A → A
Error (line: 8, pos: 34) invalid definition, type still contains metavariables after elaboration, metavariable: ?M::3, type:
(Type U)
